# easybay

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
backend/: .gitignore  downloads.db  pyproject.toml  requirements.txt
backend/src/api/: app.py
backend/src/cli/: main.py  progress.py
backend/src/core/: config.py  detector.py  downloader.py  models.py  quality.py
backend/src/db/: models.py
backend/src/image_tools/: background.py  passport.py  passport_sizes.py  svg.py
backend/src/torrent/: __init__.py  magnet.py  manager.py
backend/src/watermark/: remover.py
backend/tests/: test_api.py  test_detector.py  test_downloader.py  test_image_tools.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vercel.json  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/__tests__/: App.test.tsx  setup.ts
frontend/src/components/dashboard/: active-download-card.tsx  activity-feed.tsx  dashboard.tsx  quick-add.tsx  stats-card.tsx  storage-widget.tsx  system-status.tsx  torrent-mini-card.tsx
frontend/src/components/downloads/: download-card.tsx  download-form.tsx  download-list.tsx  download-modal.tsx  media-preview.tsx
frontend/src/components/files/: file-browser.tsx
frontend/src/components/image-tools/: image-tools.tsx  remove-bg-form.tsx  to-svg-form.tsx
frontend/src/components/landing/: landing-page.tsx
frontend/src/components/layout/: footer.tsx  header.tsx  notification-dropdown.tsx  sidebar.tsx
frontend/src/components/passport/: passport-page.tsx
frontend/src/components/settings/: settings-page.tsx
frontend/src/components/theme/: theme-toggle.tsx
frontend/src/components/torrents/: torrent-card.tsx  torrent-form.tsx  torrent-list.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  progress.tsx  select.tsx  skeleton.tsx
frontend/src/hooks/: use-downloads.ts  use-notification-sound.ts  use-remove-bg.ts  use-settings.ts  use-torrents.ts
frontend/src/lib/: api.ts  notify.ts  utils.ts  ws.ts
