[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easybay"
version = "0.1.0"
description = "Download videos from YouTube, TikTok, Instagram, and Twitter"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2026.7.4",
    "typer[all]>=0.26.8",
    "rich>=15.0.0",
    "fastapi>=0.139.0",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.51.0",
    "sqlalchemy>=2.0.51",
    "aiosqlite>=0.22.1",
    "websockets>=16.1",
    "aiotorrent>=0.9.0",
    "rembg[birefnet-general]>=2.0.75",
    "mediapipe>=0.10.35",
    "Pillow>=12.3.0",
    "psutil>=7.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
    "mypy>=2.2.0",
    "httpx>=0.28.1",
    "bandit>=1.9.4",
    "pre-commit>=4.6.0",
]

[project.scripts]
easybay = "src.cli.main:app"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.api.app"
disable_error_code = ["assignment", "arg-type", "operator", "index", "call-overload"]

[[tool.mypy.overrides]]
module = "src.torrent.manager"
disable_error_code = ["annotation-unchecked"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
